# effect-py

./: .gitignore  README.md  pyproject.toml
docs/: CONTEXT.md
examples/: matmul_pipeline.py  train_mnist.py
src/effect/: __init__.py  cause.py  concurrency.py  context.py  effect.py  exit.py  fiber_ref.py  function_.py  option.py  pipeable.py  ref.py  runtime.py  schedule.py  semaphore.py  synchronized_ref.py
src/effect/_internal/: core.py  runtime_env.py
src/effect/_internal/op_codes/: effect.py
src/effect_torch/: __init__.py  errors.py  pipeline.py  rng.py
tests/: test_deferred.py  test_fiber_ref.py  test_scope.py  test_semaphore.py  test_torch_slice.py
