[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "effect"
version = "0.1.0"
description = "A Python port of Effect-TS — typed functional effects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "ty>=0.0.1a19",
]
torch = [
    "torch>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/effect", "src/effect_torch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]
