[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "effect-workspace"
version = "0.1.0"
description = "Monorepo workspace for effect-py ecosystem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false
workspace = { members = ["packages/*"] }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "ty>=0.0.1a19",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/effect/tests",
    "packages/effect-numpy/tests",
    "packages/effect-pytorch/tests",
]
pythonpath = [
    "packages/effect/src",
    "packages/effect-numpy/src",
    "packages/effect-pytorch/src",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "packages/effect/src",
    "packages/effect/tests",
    "packages/effect-numpy/src",
    "packages/effect-numpy/tests",
    "packages/effect-pytorch/src",
    "packages/effect-pytorch/tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = [
    "packages/effect/src",
    "packages/effect/tests",
    "packages/effect-numpy/src",
    "packages/effect-numpy/tests",
    "packages/effect-pytorch/src",
    "packages/effect-pytorch/tests",
]
